shifted from inline css to external css in every section to correct responsiveness

--- a/Projects/FullCss Project/style.css
+++ b/Projects/FullCss Project/style.css
@@ -533,22 +533,45 @@ button:hover {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
-    justify-items: center;
     align-items: center;
+    gap: 0;
+    margin: 0 auto;
+    /* border: 3px solid red; */
 }
 
 .every-text-part {
-    border: 5px solid blue;
     width: 50%;
+    padding: 35px 20px 35px 35px;
+    margin: 0;
+    /* border: 3px solid blue; */
 }
 
 .every-image-part {
+    width: 415px;
+    height: 415px;
     background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/499374d6f5295d4a8f9d3947/jhjhjh.jpg");
     border-radius: 50%;
     background-size: cover;
-    height: 200px;
-    width: 200px;
-    border: 3px solid red;
+    /* border: 3px solid green; */
+}
+
+.every-text-part button {
+    padding: 12px;
+    width: 170px;
+    background: linear-gradient(to right, rgb(249, 126, 131), rgb(225, 54, 144));
+    border: none;
+    color: white;
+    font-size: 16px;
+    border-radius: 30px;
+    letter-spacing: 1px;
+    margin-top: 100px;
+    /* border: 3px solid green; */
+    transition: all 0.3s ease-in-out;
+
+}
+
+button:hover {
+    transform: translateY(-10%);
 }
 
 
@@ -662,4 +685,60 @@ button:hover {
         /* border: 3px solid green; */
         margin-top: 50px;
     }
+
+
+
+
+
+    .every {
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        flex-wrap: wrap;
+        border: 3px solid red;
+    }
+
+    .every-text-part {
+        width: 100%;
+        padding: 35px 20px 35px 35px;
+        margin: 0;
+        border: 3px solid blue;
+    }
+    .every .every-text-part h2 {
+        border: 4px solid black;
+        font-size: 32px;
+        text-align: center;
+    }
+    .every-text-part p{
+        font-size: 16px;
+        border: 4px solid black;
+    }
+    
+
+    .every-image-part {
+        width: 415px;
+        height: 415px;
+        background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/499374d6f5295d4a8f9d3947/jhjhjh.jpg");
+        border-radius: 50%;
+        background-size: cover;
+        border: 3px solid green;
+    }
+
+    .every-text-part button {
+    padding: 12px;
+    width: 170px;
+    /* height: 0px; */
+    background: linear-gradient(to right, rgb(249, 126, 131), rgb(225, 54, 144));
+    border: none;
+    color: white;
+    font-size: 16px;
+    border-radius: 30px;
+    letter-spacing: 1px;
+    margin-top: 20px;
+    border: 3px solid yellow;
+    transition: all 0.3s ease-in-out;
+
+}
 }
